添加launch4j插件，压缩背景图片